--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ flake8 = "^3.9.1"
 django-allauth = "^0.44.0"
 dj-rest-auth = "^2.1.4"
 pytest-django = "^4.2.0"
+python-dotenv = "^0.17.0"
+django-cors-headers = "^3.7.0"
 
 [tool.poetry.dev-dependencies]
 
