--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ pytest-django = "^4.2.0"
 python-dotenv = "^0.17.0"
 django-cors-headers = "^3.7.0"
 djangorestframework-simplejwt = "^4.6.0"
+django-extensions = "^3.1.3"
+Werkzeug = "^1.0.1"
+pyOpenSSL = "^20.0.1"
 
 [tool.poetry.dev-dependencies]
 
