--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   booklovers:
     build: ""
     command: python manage.py runserver_plus 0.0.0.0:8000 --cert-file cert.crt
-#    command: python manage.py runserver 0.0.0.0:8000
+#    commands: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
     ports:
