try/except added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3.8"
 services:
   booklovers:
     build: ""
-    command: python manage.py runserver_plus 0.0.0.0:8000 --cert-file cert.crt
-#    commands: python manage.py runserver 0.0.0.0:8000
+#    command: python manage.py runserver_plus 0.0.0.0:8000 --cert-file cert.crt
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
     ports:
